crates/red_knot_python_semantic/resources/mdtest/snapshots/shadowing.md_-_Shadowing_-_Implicit_class_shadowing.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: shadowing.md - Shadowing - Implicit class shadowing
mdtest path: crates/red_knot_python_semantic/resources/mdtest/diagnostics/shadowing.md
---

# Python source files

## mdtest_snippet.py

```
1 | class C: ...
2 | 
3 | C = 1  # error: [invalid-assignment]
```

# Diagnostics

```
error: lint:invalid-assignment: Implicit shadowing of class `C`
 --> src/mdtest_snippet.py:3:1
  |
1 | class C: ...
2 |
3 | C = 1  # error: [invalid-assignment]
  | ^
  |
info: Annotate to make it explicit if this is intentional

```
